[project]
name = "proto-whatsapp-saurus"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.0.0",
    "python-dotenv>=1.0.0",
    "pymongo>=4.5.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pyjwt>=2.10.1",
]
