[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-whatsapp-saurus"
version = "0.1.0"
description = "WhatsApp AI Agent with LangGraph"
dependencies = [
    "flask>=3.1.0",
    "python-dotenv>=1.1.0",
    "pymongo>=4.15.0",
    "openai>=2.0.0",
    "requests>=2.32.0",
    "langgraph>=1.0.0",
    "langchain>=1.0.3",
    "langchain-openai>=1.0.2",
    "pyjwt>=2.10.0",
    "cryptography>=46.0.0",
    "pydantic>=2.11.0",
    "typing-extensions>=4.15.0",
    "resend>=2.16.0",
]

[tool.setuptools]
py-modules = ["main", "models", "services", "ai_agent"]
